--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,8 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  text-decoration: none;
+
 }
 
 h1,
@@ -39,4 +41,10 @@ a {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  outline:none;
 }
