--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,239 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  width: 375px;
+  height: auto;
+  color: var(--text-page_color, #F1B2CE);
+  font-family: var(--main-font, sans-serif);
+  background-color: var(--bg-page_color, #000028);
+  
+   
 }
+
+
+/* HEADER */
+.header {
+  background-image: var(--bg-image);
+  background-attachment: fixed;
+  margin-block-end: 40px;
+}
+
+.decorated-zone {
+  display: flex;
+  width: 375px;
+  height: 668px;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+}
+
+.header__theme-menu-list {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  padding: 1.5px 13px 1.5px 13px;
+  color: var(--accent-color);
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 100% */
+
+}
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--accent-color);
+}
+.header__theme-menu-button:focus {
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.text_top-right {
+  position: absolute;
+  z-index: 100;
+  top: 12px;
+  right: 40px;
+  color: var(--accent-color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 25px; /* 138.889% */
+}
+.corner {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  z-index: 100;
+}
+.corner_top-right {
+  top: 10px;
+  right: 10px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);;
+}
+.corner_bottom-left {
+  bottom: 10px;
+  left: 10px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);;
+}
+.text_top-right::before {
+  content: '';
+  position: absolute;
+  z-index: 100;
+  inset-block-start: 25%;
+  inset-inline-start: 45px;
+  inline-size: 9px;
+  block-size: 9px;
+  background-color: var(--accent-color); 
+  border-radius: 50%;
+  box-shadow: 0 0 4px var(--accent-color);
+}
+
+.header__title {
+  color: var(--text-title_color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 82.5%; /* 95.7px */
+  padding-top: 65px;
+  padding-bottom: 55px;
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+  
+}
+
+.header__subtitle {
+  color: var(--bg-page_color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 23.4px; /* 130% */
+}
+
+
+
+
+
+
+
+
+.main {
+  padding: 0 10px 0 10px;
+  margin-block-end: 40px;
+}
+
+.why__title, .what__title, .how__title {
+  color: var(--accent-color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 23.4px; /* 130% */
+  margin-block-end: 20px;
+}
+
+.why__subtitle, .what__subtitle, .how__subtitle, .can__title {
+  color: var(--bg-page_color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 23.4px; /* 130% */
+  margin-block-end: 10px;
+}
+.why__text, .what__text, .how__text {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23.4px; /* 130% */
+  margin-block-end: 20px;
+}
+
+.why, .what, .how {
+  margin-block-end: 50px;
+}
+
+.why__link {
+  color: var(--text-page_color);
+  text-decoration: none;
+  text-shadow: 1px 1px 0 var(--accent-color);
+}
+
+.how__item-title {
+  color: var(--bg-page_color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23.4px; /* 130% */
+  margin-block-start: 20px;
+  margin-block-end: 10px;
+}
+
+.how__item-text {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23.4px; /* 130% */
+  margin-block-end: 10px;
+}
+
+.can__images {
+  width: 355px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px; 
+}
+img {
+  width: 100%;
+}
+
+
+.footer {
+  display: flex;
+  width: 375px;
+  height: 667px;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+}
+.footer__title {
+  color: var(--text-title_color);
+  text-shadow: 2px 2px 0 var(--accent-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 82.5%; /* 95.7px */
+}
+
+
+
+
+
+
+
+
+/* @media (min-width: 768px) {
+  .page {
+    width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .page {
+    width: 1024px;
+  }
+} */
