--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,13 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --main-font: 'IBM Plex mono';
+  --bg-page_color: #000028;
+  --bg-text_color: #FF0070;
+  --text-title_color: #DB00FF;
+  --text-page_color: #F1B2CE;
+  --accent-color: #FF0070;
+  --bg-image: url("../images/cover-image-dark.png");
+}
