--- a/styles/style.css
+++ b/styles/style.css
@@ -2,15 +2,12 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-  width: 375px;
+  
   height: auto;
   color: var(--text-page_color, #F1B2CE);
   font-family: var(--main-font, sans-serif);
-  background-color: var(--bg-page_color, #000028);
-  
-   
+  background-color: var(--bg-page_color, #000028);   
 }
-
 
 /* HEADER */
 .header {
@@ -21,7 +18,7 @@
 
 .decorated-zone {
   display: flex;
-  width: 375px;
+
   height: 668px;
   padding: 10px;
   flex-direction: column;
@@ -33,7 +30,7 @@
   text-align: right;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
 }
 
 .header__theme-menu-button {
@@ -61,7 +58,7 @@
 .text_top-right {
   position: absolute;
   z-index: 100;
-  top: 12px;
+  top: 13px;
   right: 40px;
   color: var(--accent-color);
   font-size: 18px;
@@ -122,13 +119,8 @@
   font-style: normal;
   font-weight: 700;
   line-height: 23.4px; /* 130% */
+  height: 117px;
 }
-
-
-
-
-
-
 
 
 .main {
@@ -171,6 +163,14 @@
   text-shadow: 1px 1px 0 var(--accent-color);
 }
 
+.why__link:hover {
+  border-bottom: 1px solid var(--text-page_color);
+}
+
+.why__link:focus {
+  border: 1px solid var(--text-page_color);
+}
+
 .how__item-title {
   color: var(--bg-page_color);
   font-size: 18px;
@@ -190,7 +190,7 @@
 }
 
 .can__images {
-  width: 355px;
+  
   display: grid;
   grid-template-columns: 1fr;
   gap: 10px; 
@@ -199,10 +199,9 @@ img {
   width: 100%;
 }
 
-
 .footer {
   display: flex;
-  width: 375px;
+ 
   height: 667px;
   position: relative;
   flex-direction: column;
@@ -220,21 +219,203 @@ img {
   line-height: 82.5%; /* 95.7px */
 }
 
-
-
-
-
-
-
-
-/* @media (min-width: 768px) {
-  .page {
-    width: 768px;
+@media (min-width: 768px) {
+  
+  .header__theme-menu {
+    margin-top: 170px;
+    grid-column: 2; 
+    grid-row: 1;
   }
+
+ 
+  .decorated-zone {
+    padding: 20px 20px 20px 0;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    height: 1024px;
+  }
+  .header__title {
+    grid-column: 1 / 3; 
+    grid-row: 2;
+    padding-top: 160px;
+  padding-bottom: 165px;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+  .header__subtitle {
+     grid-column: 2; 
+     grid-row: 3;  
+     justify-self: right;
+     margin-left: 10px;
+     
+  }
+  .corner_top-right {
+    top: 20px;
+    right: 20px;
+    
+  }
+  .corner_bottom-left {
+    bottom: 20px;
+    left: 20px;
+    
+  }
+  .text_top-right {
+    
+    top: 23px;
+  }
+  .text_top-right::before {
+    inset-inline-start: 35px;
+  }
+
+
+  .main {
+    padding: 20px;
+  }
+  .why {
+    margin-block-end: 60px;
+    gap: 20px;
+   
+  }
+
+  .section {
+    display: grid;
+    grid-template-columns: 236px 1fr;
+   
+  }
+  .why__item {
+    grid-column: 2 / 3; 
+  }
+  
+  .what {
+    margin-block-end: 60px;
+  }
+  .what__item {
+    grid-column: 1 / 3;
+  }
+
+  .how__title {
+    width: 100%;
+    grid-row: 1/5;
+   
+  }
+  .how {
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+    margin-block-end: 9px;
+  }
+  .how__item {
+    width: 100%;
+    grid-column: 2 / 4; 
+    margin: 0;
+    padding: 0;
+   
+  }
+  .can__title {
+    margin-bottom: 20px;
+  }
+
+  .can__images {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, auto);
+    gap: 20px;
+  }
+
+  .can__images img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .sunset {
+    grid-column: 1 / 3; 
+    grid-row: 1 / 2; 
+  }
+  .icecream {
+    grid-column: 3 / 4; 
+    grid-row: 1 / 3; 
+  }
+  .tape {
+    grid-column: 1 / 2; 
+    grid-row: 2 / 5; 
+  }
+  .books {
+    grid-column: 2 / 3; 
+    grid-row: 2 / 3; 
+  }
+  .street {
+    grid-column: 2 / 4; 
+    grid-row: 3 / 5; 
+  }
+
+  .footer {
+    height: 1024px
+  }
+
 }
+
+
+
+
+
 
 @media (min-width: 1024px) {
   .page {
-    width: 1024px;
+    
   }
-} */
+
+  
+  .decorated-zone {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 768px;
+  }
+  .header__theme-menu {
+    grid-column: 1/3; 
+    grid-row: 1;
+    justify-self: center;
+    margin: 0;
+    margin-block-end: 273px;
+  }
+  .header__title {
+    margin: 0;
+    padding:0;
+    margin-block-end: 114px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__theme-menu-list {
+    
+    flex-direction: row;
+    gap: 15px;
+  }
+
+  .header__subtitle {
+    grid-column: 2; 
+    grid-row: 3;  
+    justify-self: right;
+    height: 70px;
+}
+
+  .section {
+    display: grid;
+    grid-template-columns: 315px 1fr;
+  
+  }
+
+  
+  .what__item {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .footer {
+    height: 768px;
+  }
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
