--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,24 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --main-font: 'IBM Plex mono';
+  --bg-page_color: #000028;
+  --text-title_color: #DB00FF;
+  --text-page_color: #F1B2CE;
+  --accent-color: #FF0070;
+  --secttion-title_color: #FF0070;
+  --header__subtitle: #000028;
+  --bg-image: url("../images/cover-image-dark.png");
 }
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  --main-font: 'IBM Plex mono';
+  --bg-page_color: #000028;
+  --text-title_color: #DB00FF;
+  --text-page_color: #F1B2CE;
+  --accent-color: #FF0070;
+  --secttion-title_color: #FF0070;
+  --header__subtitle: #000028;
+  --bg-image: url("../images/cover-image-dark.png");
 }
