--- a/styles/style.css
+++ b/styles/style.css
@@ -4,153 +4,160 @@
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   
   height: auto;
-  color: var(--text-page_color, #F1B2CE);
+  color: var(--text-page_color);
   font-family: var(--main-font, sans-serif);
-  background-color: var(--bg-page_color, #000028);   
+  background-color: var(--bg-page_color);   
 }
 
 /* HEADER */
 .header {
+  margin-block-end: 40px;
   background-image: var(--bg-image);
   background-attachment: fixed;
-  margin-block-end: 40px;
 }
 
 .decorated-zone {
+  position: relative;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   height: 668px;
   padding: 10px;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
 }
 
 .header__theme-menu-list {
-  text-align: right;
   display: flex;
   flex-direction: column;
   gap: 15px;
+  text-align: right;
 }
 
 .header__theme-menu-button {
   border: 1px solid transparent;
   padding: 1.5px 13px 1.5px 13px;
-  color: var(--accent-color);
-  text-align: center;
+  color: var(--secttion-title_color);
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: 18px; /* 100% */
+  text-align: center;
 
 }
 .header__theme-menu-button_active {
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--secttion-title_color);
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--secttion-title_color);
 }
 .header__theme-menu-button:focus {
-  border-bottom: 1px solid var(--accent-color);
+  border-bottom: 1px solid var(--secttion-title_color);
 }
 
 .text_top-right {
   position: absolute;
-  z-index: 100;
   top: 13px;
   right: 40px;
+  z-index: 100;
   color: var(--accent-color);
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: 25px; /* 138.889% */
 }
+
+.theme-light .text_top-right  {
+  display: none;
+}
+
 .corner {
-  width: 25px;
-  height: 25px;
   position: absolute;
   z-index: 100;
+  width: 25px;
+  height: 25px;
 }
+
 .corner_top-right {
   top: 10px;
   right: 10px;
   border-top: 1px solid var(--accent-color);
   border-right: 1px solid var(--accent-color);;
 }
+
 .corner_bottom-left {
   bottom: 10px;
   left: 10px;
   border-bottom: 1px solid var(--accent-color);
   border-left: 1px solid var(--accent-color);;
 }
+
 .text_top-right::before {
   content: '';
   position: absolute;
-  z-index: 100;
+  z-index: 100; 
+  border-radius: 50%;
+  box-shadow: 0 0 4px var(--accent-color);
+  background-color: var(--accent-color);
   inset-block-start: 25%;
   inset-inline-start: 45px;
   inline-size: 9px;
   block-size: 9px;
-  background-color: var(--accent-color); 
-  border-radius: 50%;
-  box-shadow: 0 0 4px var(--accent-color);
 }
 
 .header__title {
-  color: var(--text-title_color);
-  text-shadow: 4px 4px 0 var(--accent-color);
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  font-style: normal;
-  font-weight: 700;
-  line-height: 82.5%; /* 95.7px */
   padding-top: 65px;
   padding-bottom: 55px;
+  color: var(--text-title_color);
+  font-weight: 700;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  line-height: 82.5%; /* 95.7px */
+  text-shadow: 4px 4px 0 var(--accent-color);
 }
 
 .title-decor {
   background-color: var(--accent-color);
-  
 }
 
 .header__subtitle {
-  color: var(--bg-page_color);
+  height: 117px;
+  color: var(--header__subtitle);
+  font-weight: 700;
   font-size: 18px;
   font-style: normal;
-  font-weight: 700;
   line-height: 23.4px; /* 130% */
-  height: 117px;
 }
 
-
 .main {
-  padding: 0 10px 0 10px;
   margin-block-end: 40px;
+  padding: 0 10px 0 10px;
 }
 
 .why__title, .what__title, .how__title {
-  color: var(--accent-color);
+  margin-block-end: 20px;
+  color: var(--secttion-title_color);
+  font-weight: 700;
   font-size: 18px;
   font-style: normal;
-  font-weight: 700;
   line-height: 23.4px; /* 130% */
-  margin-block-end: 20px;
 }
 
 .why__subtitle, .what__subtitle, .how__subtitle, .can__title {
-  color: var(--bg-page_color);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 23.4px; /* 130% */
   margin-block-end: 10px;
-}
-.why__text, .what__text, .how__text {
+  color: var(--header__subtitle);
+  font-weight: 700;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: 23.4px; /* 130% */
+}
+
+.why__text, .what__text, .how__text {
   margin-block-end: 20px;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 23.4px; /* 130% */
 }
 
 .why, .what, .how {
@@ -172,116 +179,116 @@
 }
 
 .how__item-title {
-  color: var(--bg-page_color);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 23.4px; /* 130% */
   margin-block-start: 20px;
   margin-block-end: 10px;
+  color: var(--header__subtitle);
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 23.4px; /* 130% */
 }
 
 .how__item-text {
+  margin-block-end: 10px;
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: 23.4px; /* 130% */
-  margin-block-end: 10px;
 }
 
 .can__images {
-  
   display: grid;
   grid-template-columns: 1fr;
   gap: 10px; 
 }
+
 img {
   width: 100%;
 }
 
 .footer {
-  display: flex;
- 
-  height: 667px;
   position: relative;
+  display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  flex-shrink: 0;
+  height: 667px;
 }
+
 .footer__title {
   color: var(--text-title_color);
-  text-shadow: 2px 2px 0 var(--accent-color);
+  font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-style: normal;
-  font-weight: 700;
   line-height: 82.5%; /* 95.7px */
+  text-shadow: 2px 2px 0 var(--accent-color);
 }
 
 @media (min-width: 768px) {
   
   .header__theme-menu {
-    margin-top: 170px;
     grid-column: 2; 
     grid-row: 1;
+    margin-top: 170px;
   }
 
- 
   .decorated-zone {
-    padding: 20px 20px 20px 0;
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     height: 1024px;
+    padding: 20px 20px 20px 0;
   }
+  
   .header__title {
     grid-column: 1 / 3; 
     grid-row: 2;
     padding-top: 160px;
-  padding-bottom: 165px;
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    padding-bottom: 165px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
+
   .header__subtitle {
      grid-column: 2; 
      grid-row: 3;  
      justify-self: right;
      margin-left: 10px;
-     
   }
+
   .corner_top-right {
     top: 20px;
     right: 20px;
-    
   }
+
   .corner_bottom-left {
     bottom: 20px;
     left: 20px;
-    
   }
+
   .text_top-right {
-    
     top: 23px;
   }
+
   .text_top-right::before {
     inset-inline-start: 35px;
   }
 
-
   .main {
     padding: 20px;
   }
+
   .why {
-    margin-block-end: 60px;
     gap: 20px;
-   
+    margin-block-end: 60px;
   }
 
   .section {
     display: grid;
     grid-template-columns: 236px 1fr;
-   
   }
+
   .why__item {
     grid-column: 2 / 3; 
   }
@@ -289,28 +296,30 @@ img {
   .what {
     margin-block-end: 60px;
   }
+
   .what__item {
     grid-column: 1 / 3;
   }
 
   .how__title {
-    width: 100%;
     grid-row: 1/5;
-   
+    width: 100%;
   }
+
   .how {
     gap: 20px;
     margin: 0;
-    padding: 0;
     margin-block-end: 9px;
+    padding: 0;
   }
+
   .how__item {
-    width: 100%;
-    grid-column: 2 / 4; 
+    grid-column: 2 / 4;
+    width: 100%; 
     margin: 0;
     padding: 0;
-   
   }
+
   .can__title {
     margin-bottom: 20px;
   }
@@ -332,25 +341,29 @@ img {
     grid-column: 1 / 3; 
     grid-row: 1 / 2; 
   }
+
   .icecream {
     grid-column: 3 / 4; 
     grid-row: 1 / 3; 
   }
+
   .tape {
     grid-column: 1 / 2; 
     grid-row: 2 / 5; 
   }
+
   .books {
     grid-column: 2 / 3; 
     grid-row: 2 / 3; 
   }
+
   .street {
     grid-column: 2 / 4; 
     grid-row: 3 / 5; 
   }
 
   .footer {
-    height: 1024px
+    height: 1024px;
   }
 
 }
@@ -361,10 +374,6 @@ img {
 
 
 @media (min-width: 1024px) {
-  .page {
-    
-  }
-
   
   .decorated-zone {
     display: grid;
@@ -372,6 +381,7 @@ img {
     grid-template-rows: repeat(3, 1fr);
     height: 768px;
   }
+
   .header__theme-menu {
     grid-column: 1/3; 
     grid-row: 1;
@@ -379,15 +389,15 @@ img {
     margin: 0;
     margin-block-end: 273px;
   }
+
   .header__title {
     margin: 0;
-    padding:0;
     margin-block-end: 114px;
+    padding:0;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .header__theme-menu-list {
-    
     flex-direction: row;
     gap: 15px;
   }
@@ -397,14 +407,13 @@ img {
     grid-row: 3;  
     justify-self: right;
     height: 70px;
-}
+  }
 
   .section {
     display: grid;
     grid-template-columns: 315px 1fr;
   
   }
-
   
   .what__item {
     display: grid;
@@ -415,7 +424,9 @@ img {
   .footer {
     height: 768px;
   }
+
   .footer__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
+  
 }
