--- a/styles/light.css
+++ b/styles/light.css
@@ -19,6 +19,24 @@
   --text-page_color: #353430;
   --accent-color: #FF8DCB;
   --secttion-title_color: #353430;
+  --section-title-color-transparent: rgba(53, 52, 48, 0.5);
   --header__subtitle: #353430;
   --bg-image: url("../images/cover-image-light.png");
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --main-font: 'IBM Plex mono';
+    --bg-page_color: #FFF1F7;
+    --text-title_color: #FFC2E6;
+    --text-page_color: #353430;
+    --accent-color: #FF8DCB;
+    --secttion-title_color: #353430;
+    --section-title-color-transparent: rgba(53, 52, 48, 0.5);
+    --header__subtitle: #353430;
+    --bg-image: url("../images/cover-image-light.png");
+  }
+  .theme-auto .decoration-for-dark-theme {
+    display: none;
+  }
 }
