--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,14 +9,6 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --main-font: 'IBM Plex mono';
-  --bg-page_color: #000028;
-  --text-title_color: #DB00FF;
-  --text-page_color: #F1B2CE;
-  --accent-color: #FF0070;
-  --secttion-title_color: #FF0070;
-  --header__subtitle: #000028;
-  --bg-image: url("../images/cover-image-dark.png");
 }
 
 .theme-dark .page {
@@ -27,6 +19,8 @@
   --text-page_color: #F1B2CE;
   --accent-color: #FF0070;
   --secttion-title_color: #FF0070;
+  --section-title-color-transparent: rgba(255, 0, 112, 0.5);
   --header__subtitle: #000028;
   --bg-image: url("../images/cover-image-dark.png");
 }
+
