--- a/styles/style.css
+++ b/styles/style.css
@@ -6,23 +6,56 @@
   color: var(--text-page_color);
   font-family: var(--main-font, sans-serif);
   background-color: var(--bg-page_color);
+  background-image: var(--bg-image);
+  padding: 10px;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-attachment: fixed;
+  background-position: center; /* фоновые изображения и все другие св-ва семейства background для всех тем должны быть присвоены только к классу .page, а не к хедеру */
 }
+
 
 /* HEADER */
 .header {
-  margin-block-end: 40px;
-  background-image: var(--bg-image);
-  background-size: cover;
+  margin-block-end: 30px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  flex-direction: column;
+  justify-content: start;
+  height: 100vh;
+  min-height: 668px;
 }
 
 .decorated-zone {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 668px;
-  padding: 10px;
+}
+
+.theme-dark .decorated-zone::before {
+  content: '';
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);;
+}
+
+.theme-dark .decorated-zone::after {
+  content: '';
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);;
+  margin-bottom: 20px;
+}
+
+.header__theme-menu {
+  margin-top: 65px;
 }
 
 .header__theme-menu-list {
@@ -48,53 +81,33 @@
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--secttion-title_color);
+  border: 1px solid var(--section-title-color-transparent);
 }
 .header__theme-menu-button:focus {
   border-bottom: 1px solid var(--secttion-title_color);
 }
 
-.text_top-right {
+.decoration-for-dark-theme {
   position: absolute;
-  top: 13px;
-  right: 40px;
+  top: 0px;
+  right: 30px;
   z-index: 100;
   color: var(--accent-color);
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  line-height: 25px; /* 138.889% */
+  line-height: 25px; 
 }
 
-.theme-light .text_top-right {
+.theme-light .decoration-for-dark-theme {
   display: none;
 }
 
-.corner {
-  position: absolute;
-  z-index: 100;
-  width: 25px;
-  height: 25px;
-}
 
-.corner_top-right {
-  top: 10px;
-  right: 10px;
-  border-top: 1px solid var(--accent-color);
-  border-right: 1px solid var(--accent-color);;
-}
-
-.corner_bottom-left {
-  bottom: 10px;
-  left: 10px;
-  border-bottom: 1px solid var(--accent-color);
-  border-left: 1px solid var(--accent-color);;
-}
-
-.text_top-right::before {
+.decoration-for-dark-theme::before {
   content: '';
   position: absolute;
-  z-index: 100; 
+  z-index: 100;
   border-radius: 50%;
   box-shadow: 0 0 4px var(--accent-color);
   background-color: var(--accent-color);
@@ -105,8 +118,6 @@
 }
 
 .header__title {
-  padding-top: 65px;
-  padding-bottom: 55px;
   color: var(--text-title_color);
   font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -120,20 +131,20 @@
 }
 
 .header__subtitle {
-  height: 117px;
+  margin-top: 30px;
   color: var(--header__subtitle);
   font-weight: 700;
   font-size: 18px;
   font-style: normal;
-  line-height: 23.4px; /* 130% */
+  line-height: 23.4px;
+  align-self: start;
 }
 
 .main {
-  margin-block-end: 40px;
-  padding: 0 10px 0 10px;
+  margin-block-end: 50px;
 }
 
-.why__title, .what__title, .how__title {
+.title {
   margin-block-end: 20px;
   color: var(--secttion-title_color);
   font-weight: 700;
@@ -142,7 +153,7 @@
   line-height: 23.4px; /* 130% */
 }
 
-.why__subtitle, .what__subtitle, .how__subtitle, .can__title {
+.subtitle {
   margin-block-end: 10px;
   color: var(--header__subtitle);
   font-weight: 700;
@@ -151,7 +162,7 @@
   line-height: 23.4px; /* 130% */
 }
 
-.why__text, .what__text, .how__text {
+.text {
   margin-block-end: 20px;
   font-weight: 400;
   font-size: 18px;
@@ -177,7 +188,7 @@
   border: 1px solid var(--text-page_color);
 }
 
-.how__item-title {
+.subsubtitle {
   margin-block-start: 20px;
   margin-block-end: 10px;
   color: var(--header__subtitle);
@@ -209,12 +220,13 @@ img {
   position: relative;
   display: flex;
   flex-direction: column;
-  flex-shrink: 0;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  height: 667px;
+  height: 100vh;
+  min-height: 668px;
 }
+
 
 .footer__title {
   color: var(--text-title_color);
@@ -227,57 +239,41 @@ img {
 
 @media (min-width: 768px) {
   
+  .page {
+    padding: 20px;
+  }
+
+  .header {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    min-height: 1024px;
+    margin-block-end: 40px;
+  }
+  .theme-dark .decorated-zone::after {
+    margin-bottom: 40px;
+  }
+
   .header__theme-menu {
-    grid-column: 2; 
+    grid-column: 2;
     grid-row: 1;
     margin-top: 170px;
   }
-
-  .decorated-zone {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    height: 1024px;
-    padding: 20px 20px 20px 0;
-  }
-  
+ 
   .header__title {
-    grid-column: 1 / 3; 
+    margin-left: -20px;
+    grid-column: 1 / 3;
     grid-row: 2;
-    padding-top: 160px;
-    padding-bottom: 165px;
+    padding-top: 100px;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .header__subtitle {
-     grid-column: 2; 
-     grid-row: 3;  
+     grid-column: 2;
+     grid-row: 3;
      justify-self: right;
-     margin-left: 10px;
+     align-self: start;
   }
-
-  .corner_top-right {
-    top: 20px;
-    right: 20px;
-  }
-
-  .corner_bottom-left {
-    bottom: 20px;
-    left: 20px;
-  }
-
-  .text_top-right {
-    top: 23px;
-  }
-
-  .text_top-right::before {
-    inset-inline-start: 35px;
-  }
-
-  .main {
-    padding: 20px;
-  }
-
+  
   .why {
     gap: 20px;
     margin-block-end: 60px;
@@ -314,9 +310,13 @@ img {
 
   .how__item {
     grid-column: 2 / 4;
-    width: 100%; 
+    width: 100%;
     margin: 0;
     padding: 0;
+  }
+
+  .can {
+    margin-top: 75px;
   }
 
   .can__title {
@@ -337,59 +337,63 @@ img {
   }
 
   .sunset {
-    grid-column: 1 / 3; 
+    grid-column: 1 / 3;
     grid-row: 1 / 2;
   }
 
   .icecream {
-    grid-column: 3 / 4; 
+    grid-column: 3 / 4;
     grid-row: 1 / 3;
   }
 
   .tape {
-    grid-column: 1 / 2; 
+    grid-column: 1 / 2;
     grid-row: 2 / 5;
   }
 
   .books {
-    grid-column: 2 / 3; 
+    grid-column: 2 / 3;
     grid-row: 2 / 3;
   }
 
   .street {
-    grid-column: 2 / 4; 
+    grid-column: 2 / 4;
     grid-row: 3 / 5;
   }
 
   .footer {
-    height: 1024px;
+    margin-top: 70px;
+    height: 100vh;
+    min-height: 1024px;
   }
 
 }
 
 @media (min-width: 1024px) {
   
-  .decorated-zone {
-    display: grid;
+  
+  .header {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    height: 768px;
+    min-height: 668px;
   }
+
 
   .header__theme-menu {
     grid-column: 1/3; 
     grid-row: 1;
     justify-self: center;
-    margin: 0;
-    margin-block-end: 273px;
+    align-self: start;
+    margin: 0 auto;
   }
 
   .header__title {
-    margin: 0;
-    margin-block-end: 114px;
-    padding:0;
+    align-self: start;
+    margin-bottom: 110px;
+    margin-left: -20px;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
+
 
   .header__theme-menu-list {
     flex-direction: row;
@@ -397,10 +401,10 @@ img {
   }
 
   .header__subtitle {
-    grid-column: 2; 
-    grid-row: 3;  
+    grid-column: 2;
+    grid-row: 3;
     justify-self: right;
-    height: 70px;
+    margin: 0 auto;
   }
 
   .section {
@@ -415,12 +419,39 @@ img {
     gap: 20px;
   }
 
+
   .footer {
-    height: 768px;
+    height: 100vh;
+    min-height: 668px;
   }
 
   .footer__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
+}
+
+@media (prefers-color-scheme: dark) {
+  .theme-auto .decorated-zone::before {
+    content: '';
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 25px;
+    height: 25px;
+    border-top: 1px solid var(--accent-color);
+    border-right: 1px solid var(--accent-color);;
+  }
+  
+  .theme-auto .decorated-zone::after {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 25px;
+    height: 25px;
+    border-bottom: 1px solid var(--accent-color);
+    border-left: 1px solid var(--accent-color);;
+    margin-bottom: 40px;
+  }
 }
