--- a/styles/style.css
+++ b/styles/style.css
@@ -3,66 +3,96 @@
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   height: auto;
-  color: var(--text-page_color);
+  color: var(--section-text_color);
   font-family: var(--main-font, sans-serif);
-  background-color: var(--bg-page_color);
   background-image: var(--bg-image);
-  padding: 10px;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: center; /* фоновые изображения и все другие св-ва семейства background для всех тем должны быть присвоены только к классу .page, а не к хедеру */
+  padding: 0 10px 0 10px;
 }
 
-
-/* HEADER */
-.header {
-  margin-block-end: 30px;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
-  flex-direction: column;
-  justify-content: start;
-  height: 100vh;
-  min-height: 668px;
-}
+/* Декоративная зона  */
 
 .decorated-zone {
   position: relative;
 }
 
-.theme-dark .decorated-zone::before {
+.decorated-zone::before {
   content: '';
   position: absolute;
-  top: 0px;
+  top: 10px;
   right: 0px;
   width: 25px;
   height: 25px;
-  border-top: 1px solid var(--accent-color);
-  border-right: 1px solid var(--accent-color);;
+  border-top: 1px solid var(--secttion-title_color);
+  border-right: 1px solid var(--secttion-title_color);;
 }
 
-.theme-dark .decorated-zone::after {
+.decorated-zone::after {
   content: '';
   position: absolute;
-  bottom: 0px;
+  bottom: 10px;
   left: 0px;
   width: 25px;
   height: 25px;
-  border-bottom: 1px solid var(--accent-color);
-  border-left: 1px solid var(--accent-color);;
-  margin-bottom: 20px;
+  border-bottom: 1px solid var(--secttion-title_color);
+  border-left: 1px solid var(--secttion-title_color);;
+}
+
+.decoration-for-dark-theme {
+  position: absolute;
+  top: 10px; /* pixel-perfect */
+  right: 28px; /* pixel-perfect */
+  z-index: 100;
+  color: var(--accent-color);
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 25px; 
+}
+
+.decoration-for-dark-theme::before {
+  content: '';
+  position: absolute;
+  z-index: 100;
+  border-radius: 50%;
+  box-shadow: 0 0 4px var(--accent-color);
+  background-color: var(--accent-color);
+  inset-block-start: 8px; /* pixel-perfect */
+  inset-inline-start: 42px; /* pixel-perfect */
+  inline-size: 9px;
+  block-size: 9px;
+}
+
+/* HEADER */
+
+.header {
+  margin-block-end: 40px; 
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  flex-direction: column;
+  height: 100vh;
+  min-height: 668px;
 }
 
 .header__theme-menu {
-  margin-top: 65px;
+  display: flex;
+  justify-content: flex-end; 
+  align-items: center;
 }
 
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 10px;
   text-align: right;
+  margin-top: 8px;
+}
+
+.header__theme-menu-item {
+  height: 26px;
 }
 
 .header__theme-menu-button {
@@ -72,10 +102,10 @@
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  line-height: 18px; /* 100% */
+  line-height: 18px;
   text-align: center;
-
 }
+
 .header__theme-menu-button_active {
   border: 1px solid var(--secttion-title_color);
 }
@@ -87,43 +117,16 @@
   border-bottom: 1px solid var(--secttion-title_color);
 }
 
-.decoration-for-dark-theme {
-  position: absolute;
-  top: 0px;
-  right: 30px;
-  z-index: 100;
-  color: var(--accent-color);
-  font-weight: 400;
-  font-size: 18px;
-  font-style: normal;
-  line-height: 25px; 
-}
-
-.theme-light .decoration-for-dark-theme {
-  display: none;
-}
-
-
-.decoration-for-dark-theme::before {
-  content: '';
-  position: absolute;
-  z-index: 100;
-  border-radius: 50%;
-  box-shadow: 0 0 4px var(--accent-color);
-  background-color: var(--accent-color);
-  inset-block-start: 25%;
-  inset-inline-start: 45px;
-  inline-size: 9px;
-  block-size: 9px;
-}
-
 .header__title {
-  color: var(--text-title_color);
+  color: var(--header_footer-title_color);
   font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-style: normal;
-  line-height: 82.5%; /* 95.7px */
+  line-height: 82.5%;
   text-shadow: 4px 4px 0 var(--accent-color);
+  align-self: center;
+  justify-self: start;
+  text-align: start;
 }
 
 .title-decor {
@@ -131,17 +134,20 @@
 }
 
 .header__subtitle {
-  margin-top: 30px;
+  margin-top: 55px;
   color: var(--header__subtitle);
   font-weight: 700;
   font-size: 18px;
   font-style: normal;
   line-height: 23.4px;
   align-self: start;
+  justify-self: end;
 }
 
+/* MAIN */
+
 .main {
-  margin-block-end: 50px;
+  margin-block-end: 40px;
 }
 
 .title {
@@ -160,6 +166,11 @@
   font-size: 18px;
   font-style: normal;
   line-height: 23.4px; /* 130% */
+  
+}
+
+.why, .what, .how {
+  margin-block-end: 50px;
 }
 
 .text {
@@ -170,36 +181,24 @@
   line-height: 23.4px; /* 130% */
 }
 
-.why, .what, .how {
-  margin-block-end: 50px;
-}
-
-.why__link {
-  color: var(--text-page_color);
+.text__link {
+  color: var(--section-text_color);
   text-decoration: none;
   text-shadow: 1px 1px 0 var(--accent-color);
 }
 
-.why__link:hover {
-  border-bottom: 1px solid var(--text-page_color);
+.section__link:hover {
+  border-bottom: 1px solid var(--section-text_color);
 }
 
-.why__link:focus {
-  border: 1px solid var(--text-page_color);
+.section__link:focus {
+  border: 1px solid var(--section-text_color);
 }
 
 .subsubtitle {
   margin-block-start: 20px;
   margin-block-end: 10px;
   color: var(--header__subtitle);
-  font-weight: 400;
-  font-size: 18px;
-  font-style: normal;
-  line-height: 23.4px; /* 130% */
-}
-
-.how__item-text {
-  margin-block-end: 10px;
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
@@ -222,14 +221,12 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
   height: 100vh;
   min-height: 668px;
 }
 
-
 .footer__title {
-  color: var(--text-title_color);
+  color: var(--header_footer-title_color);
   font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-style: normal;
@@ -238,42 +235,41 @@ img {
 }
 
 @media (min-width: 768px) {
-  
   .page {
-    padding: 20px;
+    padding: 0 20px 0 20px;
+  }
+
+  .decorated-zone::before {
+    top: 20px;
+  }
+  
+  .decorated-zone::after {
+    bottom: 20px;
+  }
+
+  .decoration-for-dark-theme {
+    top: 20px;
   }
 
   .header {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    margin-block-end: 60px; 
     min-height: 1024px;
-    margin-block-end: 40px;
-  }
-  .theme-dark .decorated-zone::after {
-    margin-bottom: 40px;
   }
 
-  .header__theme-menu {
-    grid-column: 2;
-    grid-row: 1;
-    margin-top: 170px;
+  .header__theme-menu-list {
+    margin-top: 18px;
   }
- 
+
   .header__title {
     margin-left: -20px;
-    grid-column: 1 / 3;
-    grid-row: 2;
-    padding-top: 100px;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .header__subtitle {
-     grid-column: 2;
-     grid-row: 3;
-     justify-self: right;
-     align-self: start;
+    margin-top: 163px; /* pixel-perfect */
+    width: 50%;
   }
-  
+
   .why {
     gap: 20px;
     margin-block-end: 60px;
@@ -316,11 +312,7 @@ img {
   }
 
   .can {
-    margin-top: 75px;
-  }
-
-  .can__title {
-    margin-bottom: 20px;
+    margin-top: 60px;
   }
 
   .can__images {
@@ -328,6 +320,7 @@ img {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, auto);
     gap: 20px;
+    margin-top: 20px;
   }
 
   .can__images img {
@@ -361,97 +354,47 @@ img {
     grid-row: 3 / 5;
   }
 
-  .footer {
-    margin-top: 70px;
-    height: 100vh;
-    min-height: 1024px;
-  }
-
-}
-
-@media (min-width: 1024px) {
-  
-  
-  .header {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    min-height: 668px;
-  }
-
-
-  .header__theme-menu {
-    grid-column: 1/3; 
-    grid-row: 1;
-    justify-self: center;
-    align-self: start;
-    margin: 0 auto;
-  }
-
-  .header__title {
-    align-self: start;
-    margin-bottom: 110px;
-    margin-left: -20px;
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
-
-
-  .header__theme-menu-list {
-    flex-direction: row;
-    gap: 15px;
-  }
-
-  .header__subtitle {
-    grid-column: 2;
-    grid-row: 3;
-    justify-self: right;
-    margin: 0 auto;
-  }
-
-  .section {
-    display: grid;
-    grid-template-columns: 315px 1fr;
-  
-  }
-  
-  .what__item {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-  }
-
-
-  .footer {
-    height: 100vh;
-    min-height: 668px;
+  .main {
+    margin-block-end: 60px;
   }
 
   .footer__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
-
 }
 
-@media (prefers-color-scheme: dark) {
-  .theme-auto .decorated-zone::before {
-    content: '';
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    width: 25px;
-    height: 25px;
-    border-top: 1px solid var(--accent-color);
-    border-right: 1px solid var(--accent-color);;
+@media (min-width: 1024px) {
+
+  .header {
+    min-height: 768px;
+    grid-template-rows: auto auto 1fr;
   }
-  
-  .theme-auto .decorated-zone::after {
-    content: '';
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    width: 25px;
-    height: 25px;
-    border-bottom: 1px solid var(--accent-color);
-    border-left: 1px solid var(--accent-color);;
-    margin-bottom: 40px;
+
+  .header__theme-menu {
+    justify-content: center;
+    align-items: start;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .header__title {
+    margin-top: 275px;
+  }
+
+  .header__subtitle {
+    margin-top: 114px;
+  }
+
+  .section {
+    display: grid;
+    grid-template-columns: 315px 1fr;
+  }
+
+  .what__item {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
   }
 }
