--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,6 +5,7 @@
 
 :root {
   --main-font: 'IBM Plex mono';
+  --bg-page_color: #000028;
   --header_footer-title_color: #DB00FF;
   --section-text_color: #F1B2CE;
   --accent-color: #FF0070;
